--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -7,3 +7,28 @@
     font-size: 25px;
     color: #473653;
 }
+
+.main_desc {
+    margin-top: 65%;
+    font-family: "Open Sans light";
+    text-align: center;
+    font-size: 15px;
+    padding: 0 15%;
+    color: #fff;
+}
+
+.options {
+    margin-top: 25px;
+    width: 100%;
+    height: 150px;
+}
+
+.option {
+    display: inline-block;
+    margin-left: 2.2%;
+    height: 100%;
+    width: 45%;
+    border-radius: 5px;
+    border: 2px solid #fff;
+    box-shadow: 0 0 5px #fff;
+}
