--- a/css/logoAnimation.css
+++ b/css/logoAnimation.css
@@ -8,7 +8,7 @@
 #flumind_text {
     position: absolute;
     margin-top: -10px;
-    font-family: "Open Sans Condensed";
+    font-family: "Open Sans Condensed light";
     color: #6e6cd4;
     font-size: 75px;
 }
