--- a/css/globalStyles.css
+++ b/css/globalStyles.css
@@ -15,39 +15,148 @@ body {
     overflow: hidden;
 }
 
-.subpage {
-    width: 100vw;
-    height: 100vh;
+.opaque {
+    background: #fff;
 }
 
-.abstract1 {
-    right: 0;
-    width: 55%;
-    background: url('../img/abstracts/abstract1.svg');
-    background-position-x: right;
-    opacity: .9;
+.menu_icon {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    top: 15px;
+    right: 10px;
+    background: url('../img/menu.svg');
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
-.abstract2 {
+.close_icon {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    top: 15px;
+    left: 10px;
+    background: url('../img/menu/cerrar.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.contact_icon {
+    width: 40px;
+    height: 40px;
+    background: url('../img/menu/contacto.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.info_icon {
+    width: 40px;
+    height: 40px;
+    background: url('../img/menu/info.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.menu {
+    width: 70%;
+    right: -70%;
+    transition: all .3s ease;
+}
+
+.menu_contain {
+    position: relative;
+    width: 50%;
+    top: 60px;
     left: 0;
-    width: 100%;
-    background: url('../img/abstracts/abstract2.svg');
-    background-position-x: left;
-    opacity: .9;
+    padding-left: 40px;
 }
 
-.abstract3 {
-    left: 0;
+.menu_text {
+    font-family: "Roboto thin";
+    color: #fff;
+    font-size: 20px;
+}
+
+.menu_item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.main_title {
+    position: relative;
     width: 100%;
-    background: url('../img/abstracts/abstract3.svg');
-    background-position-x: left;
+    top: 12.5%;
+    text-align: center;
+    font-family: "Open Sans light";
+    font-size: 25px;
+    color: #473653;
+}
+
+.second_title {
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    font-family: "Open Sans bold";
+    font-size: 20px;
+}
+
+.main_desc {
+    margin-top: 65%;
+    padding: 0 15%;
+}
+
+.desc, .button_text {
+    font-family: "Open Sans light";
+    text-align: center;
+    font-size: 15px;
+    color: #fff;
+}
+
+.button_text {
+    margin-top: 10%;
+}
+
+.options {
+    margin-top: 25px;
+    width: 100%;
+    height: 150px;
+    display: flex;
+    flex-direction: row;
+    
+}
+
+.option {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin-left: 2.5%;
+    width: 45%;
+    height: 100%;
+    border-radius: 5px;
+    border: 2px solid #fff;
+    box-shadow: 0 0 5px #fff;
+}
+
+.button {
+    width: 80px;
+    height: 40px;
+    border-radius: 30px;
+    background: linear-gradient(to top, #5ca3e6, #92aeee, #bcbaf4, #ddc8f8, #f7d8fc);
 }
 
 .abstract {
     position: absolute;    
     top: 0;
     height: 50%;
+    left: 0;
+    width: 100%;
+    background: url('../img/nubes1.svg');
     background-repeat: no-repeat;
+    background-position-x: left;
 }
 
 .tabs {
@@ -106,7 +215,7 @@ body {
 }
 
 @font-face {
-    font-family: "Open Sans Condensed";
+    font-family: "Open Sans Condensed light";
     src: url('../fonts/OpenSansCondensed-Light.ttf');
 }
 
@@ -118,4 +227,14 @@ body {
 @font-face {
     font-family: "Open Sans light";
     src: url('../fonts/OpenSans-Light.ttf');
+}
+
+@font-face {
+    font-family: "Open Sans bold";
+    src: url('../fonts/OpenSans-Bold.ttf');
+}
+
+@font-face {
+    font-family: "Roboto thin";
+    src: url('../fonts/RobotoSlab-Thin.ttf');
 }
