--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -1,34 +1,10 @@
-.main_title {
-    position: relative;
-    width: 100%;
-    top: 12.5%;
-    text-align: center;
-    font-family: "Open Sans light";
-    font-size: 25px;
-    color: #473653;
-}
-
-.main_desc {
-    margin-top: 65%;
-    font-family: "Open Sans light";
-    text-align: center;
-    font-size: 15px;
-    padding: 0 15%;
-    color: #fff;
-}
-
-.options {
-    margin-top: 25px;
-    width: 100%;
-    height: 150px;
-}
-
-.option {
-    display: inline-block;
-    margin-left: 2.2%;
-    height: 100%;
-    width: 45%;
-    border-radius: 5px;
-    border: 2px solid #fff;
-    box-shadow: 0 0 5px #fff;
+.logo {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    top: 10px;
+    left: 10px;
+    background: url('../img/logo.svg');
+    background-repeat: no-repeat;
+    background-position: center;
 }
