--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -8,3 +8,8 @@
     background-repeat: no-repeat;
     background-position: center;
 }
+
+.main_desc {
+    margin-top: 67%;
+    padding: 0 15%;
+}
